src/objects/Subscription_Product__c.object
<CustomObject>
    <fields>
        <fullName>Delinian_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Delinian Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this product was created to extend the subscription, this box will be checked</inlineHelpText>
        <label>Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Used for queries in the flows. Do not display on layouts.</description>
        <formula>CASESAFEID(Subscription__r.Opportunity__c)</formula>
        <inlineHelpText>Used for queries in the flows. Do not display on layouts.</inlineHelpText>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <description>Used to filter Subscription Products in Flows</description>
        <formula>TEXT(Subscription__r.Status__c)</formula>
        <inlineHelpText>Displays the Status of the parent Subscription</inlineHelpText>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>Used to filter Subscription Products in Flows</description>
        <formula>TEXT(Subscription__r.Type__c)</formula>
        <inlineHelpText>Displays the Type from the parent Subscription</inlineHelpText>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipName>Subscription_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zephr_Account_Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zephr Account Grant</label>
        <referenceTo>Zephr_Account_Grant__c</referenceTo>
        <relationshipLabel>Subscription Products</relationshipLabel>
        <relationshipName>Subscription_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_Entitlement_Id__c</fullName>
        <formula>Product__r.ZephrEntitlementId__c</formula>
        <inlineHelpText>Displays the Zephr Entitlement Id for the Product</inlineHelpText>
        <label>Zephr Entitlement Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(Zephr_Account_Grant__c)), TEXT(Zephr_Account_Grant__r.Zephr_Integration_Status__c),
&apos;&apos;)</formula>
        <inlineHelpText>Displays the sync status of related Zephr records</inlineHelpText>
        <label>Zephr Integration Status</label>
        <type>Text</type>
    </fields>
    <label>Subscription Product</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>